IDEMPIERE-3451 IDEMPIERE_JAVA_OPTIONS property not work - general changes in setup process - enable back the ability to configure the IDEMPIERE_JAVA_OPTIONS in idempiereEnv.properties and preserve it between setups (as suggested in patch from Vinicius and Eduardo) - fix a minor issue on Console Setup - not assuming correctly the default database type - implement update-prd.sh - so other products can be updated (not just org.adempiere.server.product)